# pcg_skel

./: .bmv-post-commit.sh  .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  LICENSE.txt  README.md  index.html  mkdocs.yml  nocache.md  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test.py  test_synapse_feature.ipynb
.github/workflows/: docs.yml
background/: index.html
changelog/: index.html
docs/: background.md  changelog.md  getting-started.md  index.md  tutorial.md
docs/reference/: features.md  pcg_anno.md  pcg_skel.md  service.md
pcg_skel/: __init__.py  chunk_cache.py  chunk_features.py  chunk_features.py.e9818b7bb5931be2a9101d0ef109f886.tmp  chunk_tools.py  features.py  nocache.py  pcg_anno.py  pcg_skel.py  service.py  skel_utils.py  utils.py
reference/features/: index.html
reference/pcg_anno/: index.html
reference/pcg_skel/: index.html
reference/service/: index.html
search/: search_index.json
tests/: conftest.py  test_pcg_skel.py
tests/data/: l2_info.pkl  lvl2_eg.npy  post_syn.feather  pre_syn.feather
tutorial/: index.html
