[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pcg-skel"
version = "1.2.2"
description = "Skeletonization using the pychunkedgraph"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Casey Schneider-mizell", email = "caseys@alleninstitute.org" },
]
maintainers = [
    { name = "Casey Schneider-mizell", email = "caseys@alleninstitute.org" },
]
requires-python = ">=3.9"
dependencies = [
    "caveclient>=6.4.1",
    "cloud-volume>=11.1.3",
    "fastremap",
    "meshparty>=1.12.0",
    "numpy",
    "orjson",
    "pandas",
    "scipy",
    "sqlitedict",
    "trimesh",
]

[project.urls]
Repository = "https://github.com/AllenInstitute/pcg_skel"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ipykernel",
    "bump-my-version",
    "responses",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
lint = [
    "ruff"
]

[tool.uv]
default-groups = ["dev", "docs", "lint"]

[tool.bumpversion]
current_version = "1.2.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "v{new_version}"
commit_args = ""
pre_commit_hooks = ['uv sync', 'git add uv.lock']
post_commit_hooks = ["./.bmv-post-commit.sh"]

[[tool.bumpversion.files]]
filename = "pcg_skel/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select=["E9","F63","F7","F82"]

[tool.poe.tasks.drybump]
cmd = "uv run bump-my-version bump --dry-run --verbose"
help = "Dry run of version bump for the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.bump]
cmd = "uv run bump-my-version bump"
help = "Bump the version number in the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.test]
cmd = "uv run pytest --cov=pcg_skel tests"
help = "Run pytest with code coverage."

[tool.poe.tasks.doc-preview]
cmd = "uv run mkdocs serve"
help = "Preview documentation build locally"
